--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -21,17 +21,19 @@
                 </fieldset>
                 <br>
                 <section class= "center-button">
-                <input type="Submit"  class="yellow-button" value="Submit">
+                    <button class="yellow-button link-styling">
+                        <a href="/login" role="button">Submit</a>
+                    </button>
                 </section>
                 <br>
                 <section class= "center-button">
                     <button class="yellow-button link-styling">
-                        <a href="/auth/google" role="button">SignUp with Google</a>
+                        <a href="/auth/google" role="button">Sign Up with Google</a>
                     </button>
                 </section>
             </legend>
         </form>
     </section>
 </div>
-<!-- Insert footer.ejs -->
-<%- include('../partials/footer') -%> 
+<!-- Insert admin-footer.ejs -->
+<%- include('../partials/admin-footer.ejs') -%> 
