--- a/views/pages/tj-quiz.ejs
+++ b/views/pages/tj-quiz.ejs
@@ -58,7 +58,7 @@
         </ul>
     </section>
     <h3> Thanks for taking my quiz!</h3>
-    <div class="content-container-3">
+    <div class="content-container-3 link-styling">
         <a href="./tj-answers">Check answers here!</a>
     </div>
 </div>
