--- a/views/pages/createlog.ejs
+++ b/views/pages/createlog.ejs
@@ -10,7 +10,7 @@
     </section>
     <section class="content-container-2"> 
         <div class="content-container-3 card mint">
-            <form action="admin" method="POST">
+            <form action="/" method="POST">
                 <legend>
                     <p> Note: This page is to create a new log after a client has reached out. </p>
                     <p> In addition, you can create a new log if it was deleted by mistake. </p>
@@ -33,8 +33,9 @@
                         <textarea name="synopsis" id="synopsis" placeholder="Synopsis" minlength="10" required /> Name of Student Updating Log</textarea>
                     </fieldset>
                     <section class= "center-button">
-                        <a href="./admin">
-                            <input type="Submit" class="yellow-button" value="Submit" /></a>
+                        <button class="yellow-button link-styling">
+                            <a href="/admin" role="button">Submit</a>
+                        </button>
                     </section> 
             </form>
         </div>
