--- a/views/pages/deletelog.ejs
+++ b/views/pages/deletelog.ejs
@@ -10,7 +10,7 @@
     </section>
     <section class="content-container-2"> 
         <div class="content-container-3 card hot-pink">
-            <form action="./admin" method="POST">
+            <form action="/" method="POST">
                 <legend>
                     <p> Note: This page is to record the deletion of logs. </p>
                     <p> Please confirm with Admin before doing so. </p>
@@ -37,8 +37,9 @@
                         <textarea name="synopsis" id="synopsis" placeholder="Synopsis" minlength="10" required /> Name of Student Updating Log</textarea>
                     </fieldset>
                     <section class= "center-button">
-                        <a href="./admin">
-                        <input type="Submit" class="yellow-button" value="Submit" /></a>
+                        <button class="yellow-button link-styling">
+                            <a href="/admin" role="button">Submit</a>
+                        </button>
                     </section> 
             </form>
         </div>
