--- a/views/partials/admin-nav.ejs
+++ b/views/partials/admin-nav.ejs
@@ -10,6 +10,7 @@
                 <li><a href="/login">Login</a></li>
                 <li><a href="/admin">Admin</a>
                 </li>
+                <li><a href="/register">Register!</a></li>
             </ul>
         </nav>
         <div class = "link-styling mobile-container">
