--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -70,8 +70,11 @@
                             <input type="number" name="Phone" id="Phone" placeholder="Phone Number" minlength="10" required/>
                         </fieldset>
                         <section class= "center-button">
-                            <a href="./admin">
-                                <input type="Submit" class="yellow-button" value="Submit" /></a>
+                            <section class= "center-button">
+                                <button class="yellow-button link-styling">
+                                    <a href="/" role="button">Submit</a>
+                                </button>
+                            </section>
                         </section>
                 </form>
             </div>
