--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,6 +10,7 @@
                 <li><a href="/videogallery">About</a></li>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/tj-quiz">TJ Quiz</a></li>
+                <!-- <li><a href="/register">Register!</a></li> -->
             </ul>
         </nav>
         <div class = "link-styling mobile-container">
