adding edits to pages to back end/compare to front end

--- a/views/pages/contactus.ejs
+++ b/views/pages/contactus.ejs
@@ -17,7 +17,7 @@
         </div>
     </section>
     <h2 class = "content-container-section title-tinker">Schedule Meeting with a Practitioner :]</h2>
-    <section class="content-container-2 side-scroll-mobile">
+    <section class="content-container-2 side-scroll-mobile naples-yellow">
         <div class="card mint">
             <a href="https://calendly.com/kit-tj-services"><img src="/img/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear"></a>
             <div class="card-container">
@@ -37,7 +37,7 @@
                     <p> Email: name
                         @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>   
+                    <p> Best Time to Reach: on case-by-case basis as shadowing occurs</p>   
             </div>
         </div>
         <div class="card gold-crayola">
@@ -45,10 +45,10 @@
             <div class="card-container">
                 <h3><b>Kristopher JT Toma-Lee (they/he)</b></h3> 
                 <br>
-                    <p> Email: name
+                    <p> Email: Rainbowtardis
                         @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+                    <p> Best Time to Reach: M-F: 4:30-7pm, Sat 1-6pm EST </p>  
             </div>
         </div>
         <div class="card medium-purple">
@@ -100,10 +100,10 @@
             <div class="card-container">
                 <h3><b>Timothy Scott Crumley (he/him)</b></h3> 
                 <br>
-                    <p> Email: name
+                    <p> Email: timothycrumley
                         @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+                    <p> Best Time to Reach: early afternoon during the week, should respond by the end of the day, within 24 hours at the latest. </p>  
             </div>
         </div>
     </section>
