--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -7,7 +7,7 @@
     <section class="content-container-section">
     <h1>Login Page</h1>
     </section>
-    <section class="content-container-2">
+    <section class="content-container-2 gold-crayola">
         <form action="/admin" method="post">
             <legend>
                 <fieldset>
