--- a/views/pages/map.ejs
+++ b/views/pages/map.ejs
@@ -7,7 +7,7 @@
     <section class="content-container-section">
         <h1>Map Page</h1>
     </section>
-    <section class="content-container-2">
+    <section class="content-container-2 hot-pink">
         <a href="#"></a><img src="/img/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
     </section>
     <section class="content-container-2 hot-pink">
