--- a/views/pages/photogallery.ejs
+++ b/views/pages/photogallery.ejs
@@ -17,7 +17,7 @@
         </div>
     </section>
     <h2 class="content-container-section title-tinker">A.P Cohort 2021-2023</h2>
-    <section class="content-container-2 side-scroll-mobile">
+    <section class="content-container-2 side-scroll-mobile light-steel-blue">
     <div class="card mint">
         <a href="/contactus"><img src="/img/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear"></a>
         <div class="card-container">
