--- a/views/pages/readlog.ejs
+++ b/views/pages/readlog.ejs
@@ -8,7 +8,7 @@
     <section class="content-container-section">
         <h1>Read A Log</h1>
     </section>
-    <section class="content-container-2"> 
+    <section class="content-container-2 naples-yellow"> 
         <div class="content-container-3 card gold-crayola">
             <span>
                 Landing Page for Form Entries
