--- a/views/pages/updatelog.ejs
+++ b/views/pages/updatelog.ejs
@@ -8,7 +8,7 @@
     <section class="content-container-section">
         <h1>Update A Log</h1>
     </section>
-    <section class="content-container-2"> 
+    <section class="content-container-2 light-steel-blue"> 
         <div class="content-container-3 card vivid-sky-blue">
             <form action="/" method="POST">
                 <legend>
