--- a/views/pages/createlog.ejs
+++ b/views/pages/createlog.ejs
@@ -8,7 +8,7 @@
     <section class="content-container-section">
         <h1>Create A Log</h1>
     </section>
-    <section class="content-container-2"> 
+    <section class="content-container-2 emerald"> 
         <div class="content-container-3 card mint">
             <form action="/" method="POST">
                 <legend>
