--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,35 +7,35 @@
     <section class="content-container-section">
         <h1>Index Page</h1>
     </section>
-    <section class="content-container-2">
+    <section class="content-container-2 mint">
         <div class="content-container-3 vivid-sky-blue">
             <a href="./map">
             <p class="expansion">Map of the Globe</p></a>
         </div>
         <img src="/img/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
     </section>
-    <section class="content-container-2">
+    <section class="content-container-2 mint">
         <div class="content-container-3 vivid-sky-blue">
             <a href="./photogallery"><p class="expansion">Photo Gallery</p>
             </a>
         </div>
         <img src="/img/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
     </section>
-    <section class="content-container-2">
+    <section class="content-container-2 mint">
         <div class="content-container-3 vivid-sky-blue">
             <a href="./videogallery">
             <p class="expansion">Video Showcase of Practitioners</p></a>
         </div>
         <img src="./img/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
     </section>
-    <section class="content-container-2">
+    <section class="content-container-2 mint">
         <div class="content-container-3 vivid-sky-blue">
             <a href="./contactus">
             <p class="expansion">Contact Us</p></a>
         </div>
         <img src="/img/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
     </section>
-    <section class="content-container-2">
+    <section class="content-container-2 mint">
         <div class="content-container-3 vivid-sky-blue">
             <a href="/tj-quiz">
             <p class="expansion">Test Your TJ Knowledge!</p></a>
