--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -7,7 +7,7 @@
     <section class="content-container-section">
     <h1>Register Page</h1>
     </section>
-    <section class="content-container-2">
+    <section class="content-container-2 medium-purple">
         <form action="/" method="post">
             <legend>
                 <fieldset>
