--- a/views/pages/videogallery.ejs
+++ b/views/pages/videogallery.ejs
@@ -7,7 +7,7 @@
     <section class="content-container-section">
     <h1>Video Showcase of Practitioners</h1>
     </section>
-    <section class="content-container-2 link-styling">
+    <section class="content-container-2 vivid-sky-blue link-styling">
         <iframe width="475" height="315" src="https://drive.google.com/file/d/1FyVyZLNNosNciejJWw0DuXtgfVjbTnfF/preview" width="640" height="480" allow="autoplay"></iframe>
         <div class="content-container-3">
             <p>This is an introduction from Kit Fenrir Amreik (they/she), in a conversation with Miriam Levy (she/her), linked to: <a href="https://www.unitycircles.org/">Unity Circles</a> and the Transformative Justice Practitioner Program, discussing how their Transformative Justice journey took place, embodiment of said values, radically envisioning support, some advice for those whom are watching and how TJ created shifts in her life, to this day.
